--- a/home.html
+++ b/home.html
@@ -6,8 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <title>Hotel</title>
+    <!-- slick css -->
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
     <link rel="stylesheet" href="style/home.css">
+    <title>Hotel</title>
 </head>
 
 <body>
@@ -51,22 +53,22 @@
                     </ul>
                 </div>
             </div>
-            <!-- Family package -->
-            <div class="col-12  col-lg-6 my-3">
-                <div class="row">
-                    <h3 class="col-12 col-md-6 col-lg-8 text-center">Family package</h3>
-                    <h3 class="col-12 col-md-6 col-lg-4 text-center">1,000,000$</h3>
-                </div>
-                <div class="row ml-3">
-                    <img class="col-12 col-sm-8 img-fluid" src="image/family.jpg" alt="wedding">
-                    <ul class="col-8 offset-2 offset-sm-0 col-sm-4 pl-3 pt-sm-3">
-                        <li>Perfect site</li>
-                        <li>Luxurious decorate</li>
-                        <li>Delicious food</li>
-                        <li> Gorgeous room</li>
-                    </ul>
-                </div>
+           <!-- Family package -->
+           <div class="col-12  col-lg-6 my-3">
+            <div class="row">
+                <h3 class="col-12 col-md-6 col-lg-8 text-center">Family package</h3>
+                <h3 class="col-12 col-md-6 col-lg-4 text-center">1,000,000$</h3>
             </div>
+            <div class="row ml-3">
+                <img class="col-12 col-sm-8 img-fluid" src="image/family.jpg" alt="wedding">
+                <ul class="col-8 offset-2 offset-sm-0 col-sm-4 pl-3 pt-sm-3">
+                    <li>Perfect site</li>
+                    <li>Luxurious decorate</li>
+                    <li>Delicious food</li>
+                    <li> Gorgeous room</li>
+                </ul>
+            </div>
+        </div>
             <!-- Adventure package -->
             <div class="col-12  col-lg-6 my-3">
                 <div class="row">
@@ -177,23 +179,23 @@
         <!-- Articles -->
         <div id="divArticle">
             <!-- article 1 -->
-            <div class="row">
-                <div class="col-12 col-lg-9">
+            <div class="row my-3">
+                <div class="col-12 col-md-9">
                     <img class="img-fluid" src="image/aaa.jpg" alt="aaa">
                 </div>
-                <div class="col-12 col-lg-3 mt-lg-5">
+                <div class="col-12 col-md-3">
                     <h4>BBC: The most 4 luxury hotel in the world</h4>
                     <h6>June 01, 2019</h6>
                     <p>sakdsagksa;lgksagkvsad;lgkas;gkvs;</p>
 
                 </div>
             </div>
-            <!-- article 2 -->
-            <div class="row">
-                <div class="col-12 col-lg-9 order-lg-last">
+             <!-- article 2 -->
+            <div class="row my-3">
+                <div class="col-12 col-md-9 order-md-last">
                     <img class="img-fluid" src="image/aaa.jpg" alt="aaa">
                 </div>
-                <div class="col-12 col-lg-3 mt-lg-5">
+                <div class="col-12 col-md-3">
                     <h4>BBC: The most 4 luxury hotel in the world</h4>
                     <h6>June 01, 2019</h6>
                     <p>sakdsagksa;lgksagkvsad;lgkas;gkvs;</p>
@@ -201,11 +203,11 @@
                 </div>
             </div>
             <!-- article 3 -->
-            <div class="row">
-                <div class="col-12 col-lg-9">
+            <div class="row my-3">
+                <div class="col-12 col-md-9">
                     <img class="img-fluid" src="image/aaa.jpg" alt="aaa">
                 </div>
-                <div class="col-12 col-lg-3 mt-lg-5">
+                <div class="col-12 col-md-3">
                     <h4>BBC: The most 4 luxury hotel in the world</h4>
                     <h6>June 01, 2019</h6>
                     <p>sakdsagksa;lgksagkvsad;lgkas;gkvs;</p>
@@ -214,8 +216,6 @@
 
         </div>
     </div>
-
-
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
