finish the package, form, article section

--- a/home.html
+++ b/home.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <!-- slick css -->
@@ -38,14 +39,14 @@
         <!-- packages -->
         <div id="divPackage" class="row">
             <!-- wedding package -->
-            <div class="col-12  col-lg-6 my-3">
+            <div class="col-lg-6 my-3">
                 <div class="row">
                     <h3 class="col-12 col-md-6 col-lg-8 text-center">Wedding package</h3>
                     <h3 class="col-12 col-md-6 col-lg-4 text-center">1,000,000$</h3>
                 </div>
-                <div class="row ml-3">
+                <div class="row">
                     <img class="col-12 col-sm-8 img-fluid" src="image/wedding.jpg" alt="wedding">
-                    <ul class="col-8 offset-2 offset-sm-0 col-sm-4 pl-3 pt-sm-3">
+                    <ul class="col-8 offset-2 offset-sm-0 col-sm-4 pl-4 pt-3">
                         <li>Perfect site</li>
                         <li>Luxurious decorate</li>
                         <li>Delicious food</li>
@@ -54,14 +55,14 @@
                 </div>
             </div>
            <!-- Family package -->
-           <div class="col-12  col-lg-6 my-3">
+           <div class="col-lg-6 my-3">
             <div class="row">
-                <h3 class="col-12 col-md-6 col-lg-8 text-center">Family package</h3>
-                <h3 class="col-12 col-md-6 col-lg-4 text-center">1,000,000$</h3>
+                <h3 class="col-md-6 col-lg-8 text-center">Family package</h3>
+                <h3 class="col-md-6 col-lg-4 text-center">1,000,000$</h3>
             </div>
-            <div class="row ml-3">
-                <img class="col-12 col-sm-8 img-fluid" src="image/family.jpg" alt="wedding">
-                <ul class="col-8 offset-2 offset-sm-0 col-sm-4 pl-3 pt-sm-3">
+            <div class="row">
+                <img class="col-sm-8 img-fluid" src="image/family.jpg" alt="wedding">
+                <ul class="col-8 offset-2 offset-sm-0 col-sm-4 pl-4 pt-3">
                     <li>Perfect site</li>
                     <li>Luxurious decorate</li>
                     <li>Delicious food</li>
@@ -70,14 +71,14 @@
             </div>
         </div>
             <!-- Adventure package -->
-            <div class="col-12  col-lg-6 my-3">
+            <div class="col-lg-6 my-3">
                 <div class="row">
-                    <h3 class="col-12 col-md-6 col-lg-8 text-center">Adventure package</h3>
-                    <h3 class="col-12 col-md-6 col-lg-4 text-center">1,000,000$</h3>
+                    <h3 class="col-md-6 col-lg-8 text-center">Adventure package</h3>
+                    <h3 class="col-md-6 col-lg-4 text-center">1,000,000$</h3>
                 </div>
-                <div class="row ml-3">
-                    <img class="col-12 col-sm-8 img-fluid" src="image/diving.jpg" alt="wedding">
-                    <ul class="col-8 offset-2 offset-sm-0 col-sm-4 pl-3 pt-sm-3">
+                <div class="row ">
+                    <img class="col-sm-8 img-fluid" src="image/diving.jpg" alt="wedding">
+                    <ul class="col-8 offset-2 offset-sm-0 col-sm-4 pl-4 pt-sm-3">
                         <li>Perfect site</li>
                         <li>Luxurious decorate</li>
                         <li>Delicious food</li>
@@ -86,14 +87,14 @@
                 </div>
             </div>
             <!-- King package -->
-            <div class="col-12  col-lg-6 my-3">
+            <div class="col-lg-6 my-3">
                 <div class="row">
-                    <h3 class="col-12 col-md-6 col-lg-8 text-center">King package</h3>
-                    <h3 class="col-12 col-md-6 col-lg-4 text-center">1,000,000$</h3>
+                    <h3 class="col-md-6 col-lg-8 text-center">King package</h3>
+                    <h3 class="col-md-6 col-lg-4 text-center">1,000,000$</h3>
                 </div>
-                <div class="row ml-3">
-                    <img class="col-12 col-sm-8 img-fluid" src="image/golf.jpg" alt="wedding">
-                    <ul class="col-8 offset-2 offset-sm-0 col-sm-4 pl-3 pt-sm-3">
+                <div class="row ">
+                    <img class="col-sm-8 img-fluid" src="image/golf.jpg" alt="wedding">
+                    <ul class="col-8 offset-2 offset-sm-0 col-sm-4 pl-4 pt-sm-3">
                         <li>Perfect site</li>
                         <li>Luxurious decorate</li>
                         <li>Delicious food</li>
@@ -102,14 +103,14 @@
                 </div>
             </div>
             <!-- Queen package -->
-            <div class="col-12  col-lg-6 my-3">
+            <div class="col-lg-6 my-3">
                 <div class="row">
-                    <h3 class="col-12 col-md-6 col-lg-8 text-center">Queen package</h3>
-                    <h3 class="col-12 col-md-6 col-lg-4 text-center">1,000,000$</h3>
+                    <h3 class="col-md-6 col-lg-8 text-center">Queen package</h3>
+                    <h3 class=" col-md-6 col-lg-4 text-center">1,000,000$</h3>
                 </div>
-                <div class="row ml-3">
-                    <img class="col-12 col-sm-8 img-fluid" src="image/spa.jpg" alt="wedding">
-                    <ul class="col-8 offset-2 offset-sm-0 col-sm-4 pl-3 pt-sm-3">
+                <div class="row ">
+                    <img class="col-sm-8 img-fluid" src="image/spa.jpg" alt="wedding">
+                    <ul class="col-8 offset-2 offset-sm-0 col-sm-4 pl-4 pt-sm-3">
                         <li>Perfect site</li>
                         <li>Luxurious decorate</li>
                         <li>Delicious food</li>
@@ -118,14 +119,14 @@
                 </div>
             </div>
             <!-- Meeting package -->
-            <div class="col-12  col-lg-6 my-3">
+            <div class="col-lg-6 my-3">
                 <div class="row">
-                    <h3 class="col-12 col-md-6 col-lg-8 text-center">Meeting package</h3>
-                    <h3 class="col-12 col-md-6 col-lg-4 text-center">1,000,000$</h3>
+                    <h3 class="col-md-6 col-lg-8 text-center">Meeting package</h3>
+                    <h3 class="col-md-6 col-lg-4 text-center">1,000,000$</h3>
                 </div>
-                <div class="row ml-3">
-                    <img class="col-12 col-sm-8 img-fluid" src="image/meeting.jpg" alt="wedding">
-                    <ul class="col-8 offset-2 offset-sm-0 col-sm-4 pl-3 pt-sm-3">
+                <div class="row ">
+                    <img class="col-sm-8 img-fluid" src="image/meeting.jpg" alt="wedding">
+                    <ul class="col-8 offset-2 offset-sm-0 col-sm-4 pl-4 pt-sm-3">
                         <li>Perfect site</li>
                         <li>Luxurious decorate</li>
                         <li>Delicious food</li>
@@ -136,45 +137,61 @@
         </div>
 
         <!-- reservation form -->
-        <div id="divForm">
+        <section id="secForm" class="my-5">
             <form action="get">
-                <div>
-                    <label for="numPerson">Number of person</label>
-                    <input type="number" id="numPerson" />
-                </div>
-                <div>
-                    <label for="slcPackage">Package</label>
-                    <select name="slcPackage" id="slcPackage">
-                        <option value="Wedding">Wedding</option>
-                        <option value="Family">Family</option>
-                        <option value="Meeting">Meeting</option>
-                        <option value="King">King</option>
-                        <option value="Queen">Queen</option>
-                        <option value="Adventure">Adventure</option>
-                        <option value="FreeChoice" selected>FreeChoice</option>
-                    </select>
-                </div>
-                <div>
-                    <label for="enterDate">From</label>
-                    <input type="date" id="enterDate" />
-                </div>
-                <div>
-                    <label for="leaveDate">To</label>
-                    <input type="date" id="leaveDate" />
-                </div>
-                <div id="divSpecialNeeds">
-                    <label for="specialNeeds">Special Needs</label>
-                    <textarea name="specialNeeds" id="specialNeeds" rows="2"></textarea>
-                </div>
-                <div>
-                    <label for="tel">Tel</label>
-                    <input type="tel" id="tel" />
-                </div>
-                <div>
-                    <input type="submit" />
+                <div class="form-row">
+                    <!-- Number of people -->
+                    <div class="form-group col-sm-6 col-lg-3">
+                        <label for="numOfPeople">Number of people</label>
+                        <input type="number" class="form-control" id="numOfPeople">
+                    </div>
+                    <!-- Package selection -->
+                    <div class="form-group col-sm-6 col-lg-3">
+                        <label for="package">Package</label>
+                        <select id="package" class="form-control">
+                            <option value="Wedding">Wedding</option>
+                            <option value="Family">Family</option>
+                            <option value="Meeting">Meeting</option>
+                            <option value="King">King</option>
+                            <option value="Queen">Queen</option>
+                            <option value="Adventure">Adventure</option>
+                            <option value="FreeChoice" selected>FreeChoice</option>
+                        </select>
+                    </div>
+                    <!-- Check in -->
+                    <div class="form-group col-sm-6 col-lg-3">
+                        <label for="checkin">Check in</label>
+                        <input type="date" class="form-control" id="checkin">
+                    </div>
+                    <!-- Check out -->
+                    <div class="form-group col-sm-6 col-lg-3">
+                        <label for="checkout">Check out</label>
+                        <input type="date" class="form-control" id="checkout">
+                    </div>
+                    <!-- Tel -->
+                    <div class="form-group col-sm-6 col-lg-3">
+                        <label for="tel">Tel</label>
+                        <input type="tel" class="form-control" id="tel">
+                    </div>
+                    <!-- Email -->
+                    <div class="form-group col-sm-6 col-lg-3">
+                        <label for="email">Email</label>
+                        <input type="email" class="form-control" id="email">
+                    </div>
+                    <!-- Special need -->
+                    <div class="form-group col-lg-6">
+                        <label for="specialNeed">Special need</label>
+                        <textarea class="form-control" rows="1" name="spacialNeed" id="specialNeed"></textarea>
+                    </div>
+                    <!-- button -->
+                    <div >
+                        <button type="submit" class="btn btn-primary">Send request</button> 
+                    </div>
                 </div>
             </form>
-        </div>
+
+        </section>
+        
 
         <!-- Articles -->
         <div id="divArticle">
@@ -186,7 +203,7 @@
                 <div class="col-12 col-md-3">
                     <h4>BBC: The most 4 luxury hotel in the world</h4>
                     <h6>June 01, 2019</h6>
-                    <p>sakdsagksa;lgksagkvsad;lgkas;gkvs;</p>
+                    <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. </p>
 
                 </div>
             </div>
@@ -198,8 +215,7 @@
                 <div class="col-12 col-md-3">
                     <h4>BBC: The most 4 luxury hotel in the world</h4>
                     <h6>June 01, 2019</h6>
-                    <p>sakdsagksa;lgksagkvsad;lgkas;gkvs;</p>
-
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
                 </div>
             </div>
             <!-- article 3 -->
@@ -210,7 +226,7 @@
                 <div class="col-12 col-md-3">
                     <h4>BBC: The most 4 luxury hotel in the world</h4>
                     <h6>June 01, 2019</h6>
-                    <p>sakdsagksa;lgksagkvsad;lgkas;gkvs;</p>
+                    <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
                 </div>
             </div>
 
