add thingsTodo page

--- a/home.html
+++ b/home.html
@@ -23,7 +23,7 @@
             <ul>
                 <li><a href="home.html">resorts</a></li>
                 <li><a href="home.html">dining</a></li>
-                <li><a href="home.html">activities</a></li>
+                <li><a href="thingsToDo.html">Things to do</a></li>
             </ul>
             <button>Book now</button>
         </div>
