--- a/activities.html
+++ b/activities.html
@@ -5,7 +5,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Activities includes wedding, kids club, dining, spa, golf and meeting"> 
+    <meta name="description" content="Activities includes wedding, kids club, dining, spa, golf and meeting">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
@@ -15,15 +15,142 @@
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
     <link rel="stylesheet" type="text/css"
         href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css" />
-
+    <!-- custom css -->
+    <link rel="stylesheet" href="style/carousel.css">
+    <link rel="stylesheet" href="style/home.css">
+    <link rel="stylesheet" href="style/navs.css">
+    <link rel="stylesheet" href="style/rooms.css">
     <link rel="stylesheet" href="style/thingsTodo.css">
     <title>Things to do</title>
 </head>
 
 <body>
 
+    <!-- header -->
+    <header>
+        <!-- Carousel -->
+        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+            </ol>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img class="d-block w-100" src="image/wedding.jpg" alt="First slide">
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100" src="image/kids1.jpg" alt="Second slide">
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100" src="image/golf.jpg" alt="Third slide">
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100" src="image/diving.jpg" alt="Forth slide">
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100" src="image/meeting.jpg" alt="Fifth slide">
+                </div>
+                <div class="row mt-5">
+                    <div id="divNav" class="col-12 bg-nav">
+                        <!-- navigation goes here-->
+                        <h3 class="titles text-center"><a class="navbar-brand logo" href="index.html">S</a></h3>
+
+
+                        <nav class="navbar navbar-expand-md ">
+                            <!-- <a class="navbar-brand logo m-0" href="index.html">S</a> -->
+                            <button class="navbar-toggler" type="button" data-toggle="collapse"
+                                data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
+                                aria-label="Toggle navigation">
+                                <span class="navbar-toggler-icon brand"></span>
+                            </button>
+                            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                                <ul class="navbar-nav">
+                                    <li class="nav-item active">
+                                        <!-- <a class="nav-link brand hotelName" href="#">The Secret<span class="sr-only">(current)</span></a> -->
+                                    </li>
+                                    <li class="nav-item dropdown">
+                                        <a class="nav-link dropdown-toggle brand " href="rooms.html"
+                                            id="navbarDropdownMenuLink" role="button" data-toggle="dropdown"
+                                            aria-haspopup="true" aria-expanded="false">
+                                            Accommodations
+                                        </a>
+                                        <div class="dropdown-menu brand brand-dropdown"
+                                            aria-labelledby="navbarDropdownMenuLink">
+                                            <a class="dropdown-item brand brand-dropdown" href="rooms.html">Rooms</a>
+                                            <a class="dropdown-item brand brand-dropdown" href="rooms.html">Suites</a>
+                                            <a class="dropdown-item brand brand-dropdown"
+                                                href="rooms.html">Penthouse</a>
+                                        </div>
+                                    </li>
+                                    <li class="nav-item dropdown">
+                                        <a class="nav-link dropdown-toggle brand" href="#" id="navbarDropdownMenuLink"
+                                            role="button" data-toggle="dropdown" aria-haspopup="true"
+                                            aria-expanded="false">
+                                            Dining
+                                        </a>
+                                        <div class="dropdown-menu brand brand-dropdown"
+                                            aria-labelledby="navbarDropdownMenuLink">
+                                            <a class="dropdown-item disabled brand brand-dropdown"
+                                                href="#">Restaurant</a>
+                                            <a class="dropdown-item disabled brand brand-dropdown" href="#">Bar</a>
+                                            <a class="dropdown-item disabled brand brand-dropdown" href="#">Bistro</a>
+                                            <a class="dropdown-item disabled brand brand-dropdown" href="#">Poolside
+                                                Dining</a>
+                                            <a class="dropdown-item disabled brand brand-dropdown" href="#">In-room
+                                                Dining</a>
+                                        </div>
+                                    </li>
+                                    <li class="nav-item dropdown">
+                                        <a class="nav-link dropdown-toggle brand" href="activities.html"
+                                            id="navbarDropdownMenuLink" role="button" data-toggle="dropdown"
+                                            aria-haspopup="true" aria-expanded="false">
+                                            Activities
+                                        </a>
+                                        <div class="dropdown-menu brand brand-dropdown"
+                                            aria-labelledby="navbarDropdownMenuLink">
+                                            <a class="dropdown-item brand brand-dropdown" href="#">Spa</a>
+                                            <a class="dropdown-item brand brand-dropdown" href="#">Events</a>
+                                            <a class="dropdown-item brand brand-dropdown" href="#">Requests</a>
+                                        </div>
+                                    </li>
+                                </ul>
+                            </div>
+                            <button class="btn btn-light mt1 cta" type="button"
+                                title="Call to make a reservation request">Reservation</button>
+                        </nav>
+                        <h3 class="titles text-center pt-5"> <br> Experience the Dream</h3>
+
+                    </div>
+                </div>
+            </div>
+            <!-- Nav Ends! -->
+            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
+        <!-- image gallery -->
+        <div class="row">
+            <div id="divGalary" class="img-thumbnail py-4">
+                <img class="col-2 p-0 m-0 img-thumbnail float-left" src="image/galary_01.jpg" alt="galary_1">
+                <img class="col-2 p-0 m-0 img-thumbnail float-left" src="image/galary_02.jpg" alt="galary_2">
+                <img class="col-2 p-0 m-0 img-thumbnail float-left" src="image/galary_03.jpg" alt="galary_3">
+                <img class="col-2 p-0 m-0 img-thumbnail float-right" src="image/galary_04.jpg" alt="galary_4">
+                <img class="col-2 p-0 m-0 img-thumbnail float-right" src="image/galary_05.jpg" alt="galary_5">
+                <img class="col-2 p-0 m-0 img-thumbnail float-right" src="image/galary_06.jpeg" alt="galary_6">
+            </div>
+        </div>
+    </header>
+
     <!-- wedding -->
-    <section id="weeding" class="my-5">    
+    <section id="weeding" class="my-5">
         <div class="galary">
             <div class="slider mx-5">
                 <!-- slider -->
@@ -59,7 +186,7 @@
     </section>
 
     <!-- spa -->
-    <section id="spa" class="my-5">      
+    <section id="spa" class="my-5">
         <div class="galary">
             <div class="slider mx-5">
                 <!-- slider -->
@@ -71,15 +198,15 @@
                 <div><img src="image/spa6.jpg" alt="spa" class="img-fluid"></div>
             </div>
         </div>
-        <div class="text-center"> 
-            <h3>Spa</h3>         
+        <div class="text-center">
+            <h3>Spa</h3>
             <h5>Put your feet up, let your hair down</h5>
             <h5>Enjoy a blissful trip to your well being with our deluxe treatments</h5>
         </div>
     </section>
 
     <!-- underwater world -->
-    <section id="spa" class="my-5">     
+    <section id="spa" class="my-5">
         <div class="galary">
             <div class="slider mx-5">
                 <!-- slider -->
@@ -99,7 +226,7 @@
     </section>
 
     <!-- golf -->
-    <section id="golf" class="my-5">     
+    <section id="golf" class="my-5">
         <div class="galary">
             <div class="slider mx-5">
                 <!-- slider -->
@@ -120,7 +247,7 @@
     </section>
 
     <!-- meeting -->
-    <section id="meeting" class="my-5">     
+    <section id="meeting" class="my-5">
         <div class="galary">
             <div class="slider mx-5">
                 <!-- slider -->
@@ -138,6 +265,47 @@
             <h5>Gorgeous conference room, fully equipped lecture hall</h5>
         </div>
     </section>
+
+
+    <!-- footer -->
+    <footer class="footer">
+        <div id="divNav" class="col-12 bg-nav">
+            <!-- navigation goes here-->
+            <nav class="navbar navbar-expand-md ">
+                <a class="navbar-brand logo m-0" href="index.html">S</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+                    aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon brand"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                    <ul class="navbar-nav">
+                        <li class="nav-item active">
+                            <a class="nav-link brand hotelName" href="#">The Secret<span
+                                    class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link brand" href="#">Contact Us</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link brand" href="#">Sign In</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link brand" href="#">Languages</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link brand" href="#">Careers</a>
+                        </li>
+                    </ul>
+                </div>
+                <button class="btn btn-light mt1 cta-foot" type="button"
+                    title="Call to make a reservation request">Reservation</button>
+            </nav>
+        </div>
+        <!-- footer -->
+        <h6 class="titles text-center ">&copy; JAC Team: Xiao Pei, Massoumeh Mahaei, Michelle</h6>
+
+    </footer>
+
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
