--- a/activities.html
+++ b/activities.html
@@ -16,10 +16,7 @@
     <link rel="stylesheet" type="text/css"
         href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css" />
     <!-- custom css -->
-    <link rel="stylesheet" href="style/carousel.css">
-    <link rel="stylesheet" href="style/home.css">
     <link rel="stylesheet" href="style/navs.css">
-    <link rel="stylesheet" href="style/rooms.css">
     <link rel="stylesheet" href="style/thingsTodo.css">
     <title>Things to do</title>
 </head>
@@ -109,12 +106,14 @@
                                             aria-haspopup="true" aria-expanded="false">
                                             Activities
                                         </a>
-                                        <div class="dropdown-menu brand brand-dropdown"
-                                            aria-labelledby="navbarDropdownMenuLink">
-                                            <a class="dropdown-item brand brand-dropdown" href="#">Spa</a>
-                                            <a class="dropdown-item brand brand-dropdown" href="#">Events</a>
-                                            <a class="dropdown-item brand brand-dropdown" href="#">Requests</a>
-                                        </div>
+                                        <div class="dropdown-menu brand brand-dropdown" aria-labelledby="navbarDropdownMenuLink">
+                                            <a class="dropdown-item brand brand-dropdown" href="activities.html#wedding">Wedding</a>
+                                            <a class="dropdown-item brand brand-dropdown" href="activities.html#kidsClub">KidsClub</a>
+                                            <a class="dropdown-item brand brand-dropdown" href="activities.html#diving">Diving</a>
+                                            <a class="dropdown-item brand brand-dropdown" href="activities.html#golf">Golf</a>
+                                            <a class="dropdown-item brand brand-dropdown" href="activities.html#meeting">Meeting</a>
+                                            <a class="dropdown-item brand brand-dropdown" href="activities.html#golf">Golf</a>
+                                          </div>
                                     </li>
                                 </ul>
                             </div>
@@ -122,7 +121,6 @@
                                 title="Call to make a reservation request">Reservation</button>
                         </nav>
                         <h3 class="titles text-center pt-5"> <br> Experience the Dream</h3>
-
                     </div>
                 </div>
             </div>
@@ -150,7 +148,7 @@
     </header>
 
     <!-- wedding -->
-    <section id="weeding" class="my-5">
+    <section id="wedding" class="my-5">
         <div class="galary">
             <div class="slider mx-5">
                 <!-- slider -->
@@ -206,7 +204,7 @@
     </section>
 
     <!-- underwater world -->
-    <section id="spa" class="my-5">
+    <section id="diving" class="my-5">
         <div class="galary">
             <div class="slider mx-5">
                 <!-- slider -->
@@ -320,7 +318,7 @@
         crossorigin="anonymous"></script>
     <!-- slick js -->
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-
+    <!-- custom js -->
     <script src="js/thingsTodo.js"></script>
 </body>
 
