--- a/activities.html
+++ b/activities.html
@@ -109,10 +109,10 @@
                                         <div class="dropdown-menu brand brand-dropdown" aria-labelledby="navbarDropdownMenuLink">
                                             <a class="dropdown-item brand brand-dropdown" href="activities.html#wedding">Wedding</a>
                                             <a class="dropdown-item brand brand-dropdown" href="activities.html#kidsClub">KidsClub</a>
+                                            <a class="dropdown-item brand brand-dropdown" href="activities.html#spa">Spa</a>
                                             <a class="dropdown-item brand brand-dropdown" href="activities.html#diving">Diving</a>
                                             <a class="dropdown-item brand brand-dropdown" href="activities.html#golf">Golf</a>
                                             <a class="dropdown-item brand brand-dropdown" href="activities.html#meeting">Meeting</a>
-                                            <a class="dropdown-item brand brand-dropdown" href="activities.html#golf">Golf</a>
                                           </div>
                                     </li>
                                 </ul>
@@ -320,6 +320,7 @@
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <!-- custom js -->
     <script src="js/thingsTodo.js"></script>
+    <script src="js/nav.js"></script>
 </body>
 
 </html>
