--- a/index.html
+++ b/index.html
@@ -61,8 +61,6 @@
             <div id="divNav" class="col-12 bg-nav">
               <!-- navigation goes here-->
               <h3 class="titles text-center"><a class="navbar-brand logo" href="index.html">S</a></h3>
-
-
               <nav class="navbar navbar-expand-md ">
                 <!-- <a class="navbar-brand logo m-0" href="index.html">S</a> -->
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
@@ -99,23 +97,22 @@
                       </div>
                     </li>
                     <li class="nav-item dropdown">
-                      <!-- <a class="nav-link brand" href="activities.html">Activities</a> -->
-                      <a class="nav-link dropdown-toggle brand" href="activities.html" id="navbarDropdownMenuLink"
-                      role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                      Activities
-                    </a>
+                    <a class="nav-link dropdown-toggle brand" href="activities.html" id="navbarDropdownMenuLink" role="button"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Activities
+                      </a>
                       <div class="dropdown-menu brand brand-dropdown" aria-labelledby="navbarDropdownMenuLink">
                         <a class="dropdown-item brand brand-dropdown" href="activities.html#wedding">Wedding</a>
                         <a class="dropdown-item brand brand-dropdown" href="activities.html#kidsClub">KidsClub</a>
+                        <a class="dropdown-item brand brand-dropdown" href="activities.html#spa">Spa</a>
                         <a class="dropdown-item brand brand-dropdown" href="activities.html#diving">Diving</a>
                         <a class="dropdown-item brand brand-dropdown" href="activities.html#golf">Golf</a>
                         <a class="dropdown-item brand brand-dropdown" href="activities.html#meeting">Meeting</a>
-                        <a class="dropdown-item brand brand-dropdown" href="activities.html#golf">Golf</a>
                       </div>
                     </li>
                   </ul>
                 </div>
-                <button class="btn btn-light mt1 cta" type="button"
+                <button class="btn btn-light mt1 cta btnReservation" type="button"
                   title="Call to make a reservation request">Reservation</button>
               </nav>
               <h3 class="titles text-center pt-5"> <br> Experience the Dream</h3>
@@ -402,7 +399,7 @@
               </li>
             </ul>
           </div>
-          <button class="btn btn-light mt1 cta-foot" type="button"
+          <button class="btn btn-light mt1 cta-foot btnReservation" type="button"
             title="Call to make a reservation request">Reservation</button>
         </nav>
       </div>
@@ -422,6 +419,9 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
     integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
   </script>
+
+    <!-- custom js -->
+    <script src="js/nav.js"></script>
 
 </body>
 
