--- a/dining.html
+++ b/dining.html
@@ -86,10 +86,10 @@
                           Dining
                         </a>
                         <div class="dropdown-menu brand brand-dropdown" aria-labelledby="navbarDropdownMenuLink">
-                          <a class="dropdown-item disabled brand brand-dropdown" href="#restaurant">Restaurant</a>
-                          <a class="dropdown-item disabled brand brand-dropdown" href="dining.html">Bar</a>
-                          <a class="dropdown-item disabled brand brand-dropdown" href="dining.html">Poolside Dining</a>
-                          <a class="dropdown-item disabled brand brand-dropdown" href="dining.html">In-room Dining</a>
+                          <a class="dropdown-item disabled brand brand-dropdown" href="dining.html#Restaurant">Restaurant</a>
+                          <a class="dropdown-item disabled brand brand-dropdown" href="dining.html#Bar">Bar</a>
+                          <a class="dropdown-item disabled brand brand-dropdown" href="dining.html#Poolside">Poolside Dining</a>
+                          <a class="dropdown-item disabled brand brand-dropdown" href="dining.html#In-room">In-room Dining</a>
                         </div>
                       </li>
                       <li class="nav-item dropdown">
@@ -154,7 +154,7 @@
     </section>
 
     <!-- restaurant -->
-    <section id="restaurant" class="my-5">
+    <section id="Restaurant" class="my-5">
         <div class="row">
             <div class="col-lg-3 py-2">
                 <div class="hovereffect">
@@ -175,7 +175,7 @@
         </div>      
     </section>
     <!--bar-->
-    <div class="container mt-40">
+    <div id="Bar" class="container mt-40">
         <h3 class="text-center">The Secret Bar</h3>
         <div class="row mt-30">
             <div class="col-md-4">
@@ -205,7 +205,7 @@
         </div>
     </div>
         <!-- Side pool and in-room -->
-        <section id="pool" class="my-5">
+        <section id="Poolside" class="my-5">
             <div class="container mt-40">
                 <h3 class="text-center">POOL SIDE OR IN-ROOM?</h3>
                 <div class="row mt-30">
