--- a/navs.html
+++ b/navs.html
@@ -134,14 +134,14 @@
         <img class="col-2 p-0 m-0 img-thumbnail float-left" src="image/galary_02.jpg" alt="galary_2">
         <img class="col-2 p-0 m-0 img-thumbnail float-left" src="image/galary_03.jpg" alt="galary_3">
         <img class="col-2 p-0 m-0 img-thumbnail float-right" src="image/galary_04.jpg" alt="galary_4">
-        <img class="col-2 p-0 m-0 img-thumbnail float-right" src="image/galary_05.jpg" alt="galary_5">
-        <img class="col-2 p-0 m-0 img-thumbnail float-right" src="image/galary_06.jpeg" alt="galary_6">
+        <img class="col-2 p-0 m-0 img-thumbnail float-right" src="image/galary_05.jpg" alt="galary_5" >
+        <img class="col-2 p-0 m-0 img-thumbnail float-right" src="image/galary_06.jpeg" alt="galary_6" >
       </div>
     </div>
     <!-- <hr> -->
     <!-- footer -->
     <footer class="footer">
-      <div id="divNav" class="col-12 bg-nav">
+      <div id="divFooter" class="col-12 bg-nav">
         <!-- navigation goes here-->
         <nav class="navbar navbar-expand-md ">
           <a class="navbar-brand logo m-0" href="index.html">S</a>
