--- a/rooms.html
+++ b/rooms.html
@@ -89,10 +89,9 @@
                 </a>
                 <div class="dropdown-menu brand brand-dropdown"
                     aria-labelledby="navbarDropdownMenuLink">
-                    <a class="dropdown-item brand brand-dropdown" href="rooms.html">Rooms</a>
-                    <a class="dropdown-item brand brand-dropdown" href="rooms.html">Suites</a>
-                    <a class="dropdown-item brand brand-dropdown"
-                        href="rooms.html">Penthouse</a>
+                    <a class="dropdown-item brand brand-dropdown" href="rooms.html#rooms">Rooms</a>
+                    <a class="dropdown-item brand brand-dropdown" href="rooms.html#suites">Suites</a>
+                    <a class="dropdown-item brand brand-dropdown" href="rooms.html#penthouse">Penthouse</a>
                 </div>
             </li>                  <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle brand" href="dining.html" id="navbarDropdownMenuLink"
