--- a/navs.html
+++ b/navs.html
@@ -89,11 +89,10 @@
                       Dining
                     </a>
                     <div class="dropdown-menu brand brand-dropdown" aria-labelledby="navbarDropdownMenuLink">
-                      <a class="dropdown-item disabled brand brand-dropdown" href="#">Restaurant</a>
-                      <a class="dropdown-item disabled brand brand-dropdown" href="#">Bar</a>
-                      <a class="dropdown-item disabled brand brand-dropdown" href="#">Bistro</a>
-                      <a class="dropdown-item disabled brand brand-dropdown" href="#">Poolside Dining</a>
-                      <a class="dropdown-item disabled brand brand-dropdown" href="#">In-room Dining</a>
+                      <a class="dropdown-item disabled brand brand-dropdown" href="dining.html#Restaurant">Restaurant</a>
+                      <a class="dropdown-item disabled brand brand-dropdown" href="dining.html#Bar">Bar</a>
+                      <a class="dropdown-item disabled brand brand-dropdown" href="dining.html#Poolside">Poolside Dining</a>
+                      <a class="dropdown-item disabled brand brand-dropdown" href="dining.html#In-room">In-room Dining</a>
                     </div>
                   </li>
                   <li class="nav-item dropdown">
