--- a/index.html
+++ b/index.html
@@ -77,11 +77,13 @@
                         role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Accommodations
                       </a>
-                      <div class="dropdown-menu brand brand-dropdown" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item brand brand-dropdown" href="rooms.html">Rooms</a>
-                        <a class="dropdown-item brand brand-dropdown" href="rooms.html">Suites</a>
-                        <a class="dropdown-item brand brand-dropdown" href="rooms.html">Penthouse</a>
-                      </div>
+                      <div class="dropdown-menu brand brand-dropdown"
+                      aria-labelledby="navbarDropdownMenuLink">
+                      <a class="dropdown-item brand brand-dropdown" href="rooms.html">Rooms</a>
+                      <a class="dropdown-item brand brand-dropdown" href="rooms.html">Suites</a>
+                      <a class="dropdown-item brand brand-dropdown"
+                          href="rooms.html">Penthouse</a>
+                  </div>
                     </li>
                     <li class="nav-item dropdown">
                       <a class="nav-link dropdown-toggle brand" href="#" id="navbarDropdownMenuLink" role="button"
@@ -89,11 +91,10 @@
                         Dining
                       </a>
                       <div class="dropdown-menu brand brand-dropdown" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item disabled brand brand-dropdown" href="#">Restaurant</a>
-                        <a class="dropdown-item disabled brand brand-dropdown" href="#">Bar</a>
-                        <a class="dropdown-item disabled brand brand-dropdown" href="#">Bistro</a>
-                        <a class="dropdown-item disabled brand brand-dropdown" href="#">Poolside Dining</a>
-                        <a class="dropdown-item disabled brand brand-dropdown" href="#">In-room Dining</a>
+                        <a class="dropdown-item disabled brand brand-dropdown" href="dining.html#Restaurant">Restaurant</a>
+                        <a class="dropdown-item disabled brand brand-dropdown" href="dining.html#Bar">Bar</a>
+                        <a class="dropdown-item disabled brand brand-dropdown" href="dining.html#Poolside">Poolside Dining</a>
+                        <a class="dropdown-item disabled brand brand-dropdown" href="dining.html#In-room">In-room Dining</a>
                       </div>
                     </li>
                     <li class="nav-item dropdown">
