--- a/activities.html
+++ b/activities.html
@@ -56,65 +56,45 @@
                         <h3 class="titles text-center"><a class="navbar-brand logo" href="index.html">S</a></h3>
 
 
-                        <nav class="navbar navbar-expand-md ">
-                            <!-- <a class="navbar-brand logo m-0" href="index.html">S</a> -->
-                            <button class="navbar-toggler" type="button" data-toggle="collapse"
-                                data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
-                                aria-label="Toggle navigation">
-                                <span class="navbar-toggler-icon brand"></span>
-                            </button>
-                            <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                                <ul class="navbar-nav">
-                                    <li class="nav-item active">
-                                        <!-- <a class="nav-link brand hotelName" href="#">The Secret<span class="sr-only">(current)</span></a> -->
-                                    </li>
-                                    <li class="nav-item dropdown">
-                                        <a class="nav-link dropdown-toggle brand " href="rooms.html"
-                                            id="navbarDropdownMenuLink" role="button" data-toggle="dropdown"
-                                            aria-haspopup="true" aria-expanded="false">
-                                            Accommodations
-                                        </a>
-                                        <div class="dropdown-menu brand brand-dropdown"
-                                            aria-labelledby="navbarDropdownMenuLink">
-                                            <a class="dropdown-item brand brand-dropdown" href="rooms.html">Rooms</a>
-                                            <a class="dropdown-item brand brand-dropdown" href="rooms.html">Suites</a>
-                                            <a class="dropdown-item brand brand-dropdown"
-                                                href="rooms.html">Penthouse</a>
-                                        </div>
-                                    </li>
-                                    <li class="nav-item dropdown">
-                                        <a class="nav-link dropdown-toggle brand" href="#" id="navbarDropdownMenuLink"
-                                            role="button" data-toggle="dropdown" aria-haspopup="true"
-                                            aria-expanded="false">
-                                            Dining
-                                        </a>
-                                        <div class="dropdown-menu brand brand-dropdown"
-                                            aria-labelledby="navbarDropdownMenuLink">
-                                            <a class="dropdown-item disabled brand brand-dropdown"
-                                                href="#">Restaurant</a>
-                                            <a class="dropdown-item disabled brand brand-dropdown" href="#">Bar</a>
-                                            <a class="dropdown-item disabled brand brand-dropdown" href="#">Bistro</a>
-                                            <a class="dropdown-item disabled brand brand-dropdown" href="#">Poolside
-                                                Dining</a>
-                                            <a class="dropdown-item disabled brand brand-dropdown" href="#">In-room
-                                                Dining</a>
-                                        </div>
-                                    </li>
-                                    <li class="nav-item dropdown">
-                                        <a class="nav-link dropdown-toggle brand" href="activities.html"
-                                            id="navbarDropdownMenuLink" role="button" data-toggle="dropdown"
-                                            aria-haspopup="true" aria-expanded="false">
-                                            Activities
-                                        </a>
-                                        <div class="dropdown-menu brand brand-dropdown" aria-labelledby="navbarDropdownMenuLink">
-                                            <a class="dropdown-item brand brand-dropdown" href="activities.html#wedding">Wedding</a>
-                                            <a class="dropdown-item brand brand-dropdown" href="activities.html#kidsClub">KidsClub</a>
-                                            <a class="dropdown-item brand brand-dropdown" href="activities.html#spa">Spa</a>
-                                            <a class="dropdown-item brand brand-dropdown" href="activities.html#diving">Diving</a>
-                                            <a class="dropdown-item brand brand-dropdown" href="activities.html#golf">Golf</a>
-                                            <a class="dropdown-item brand brand-dropdown" href="activities.html#meeting">Meeting</a>
-                                          </div>
-                                    </li>
+                        <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle brand " href="rooms.html"
+                    id="navbarDropdownMenuLink" role="button" data-toggle="dropdown"
+                    aria-haspopup="true" aria-expanded="false">
+                    Accommodations
+                </a>
+                <div class="dropdown-menu brand brand-dropdown"
+                    aria-labelledby="navbarDropdownMenuLink">
+                    <a class="dropdown-item brand brand-dropdown" href="rooms.html#rooms">Rooms</a>
+                    <a class="dropdown-item brand brand-dropdown" href="rooms.html#suites">Suites</a>
+                    <a class="dropdown-item brand brand-dropdown" href="rooms.html#penthouse">Penthouse</a>
+                </div>
+            </li>                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle brand" href="dining.html" id="navbarDropdownMenuLink"
+                    role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Dining
+                  </a>
+                    <div class="dropdown-menu brand brand-dropdown" aria-labelledby="navbarDropdownMenuLink">
+                      <a class="dropdown-item brand brand-dropdown" href="dining.html#Restaurant">Restaurant</a>
+                      <a class="dropdown-item brand brand-dropdown" href="dining.html#Bar">Bar</a>
+                      <a class="dropdown-item brand brand-dropdown" href="dining.html#Poolside">Poolside Dining</a>
+                      <a class="dropdown-item brand brand-dropdown" href="dining.html#In-room">In-room Dining</a>
+                    </div>
+                  </li>
+                  <li class="nav-item dropdown">
+                    <!-- <a class="nav-link brand" href="activities.html">Activities</a> -->
+                    <a class="nav-link dropdown-toggle brand" href="activities.html" id="navbarDropdownMenuLink"
+                    role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Activities
+                  </a>
+                    <div class="dropdown-menu brand brand-dropdown" aria-labelledby="navbarDropdownMenuLink">
+                      <a class="dropdown-item brand brand-dropdown" href="activities.html#wedding">Wedding</a>
+                      <a class="dropdown-item brand brand-dropdown" href="activities.html#kidsClub">KidsClub</a>
+                      <a class="dropdown-item brand brand-dropdown" href="activities.html#diving">Diving</a>
+                      <a class="dropdown-item brand brand-dropdown" href="activities.html#golf">Golf</a>
+                      <a class="dropdown-item brand brand-dropdown" href="activities.html#meeting">Meeting</a>
+                      <a class="dropdown-item brand brand-dropdown" href="activities.html#golf">Golf</a>
+                    </div>
+                  </li>
                                 </ul>
                             </div>
                             <button class="btn btn-light mt1 cta" type="button"
